fix gap size

--- a/bookstoreClient/src/styles/Success.css
+++ b/bookstoreClient/src/styles/Success.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.8rem;
   margin-top: 2rem;
 }
 .success-img {
